<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back">Back</string>
    <string name="support_email">katerina.mahova@yandex.ru</string>
    <string name="theme_support_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="user_search_history">Вы искали</string>
    <string name="search_clear_history">Очистить историю</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="player_start_play_time">00:00</string>
    <string name="media_favorite_tracks_title">Избранные треки</string>
    <string name="media_playlist_title">Плейлисты</string>
    <string name="media_add_new_playlist">Новый плейлист</string>
    <string name="media_favorite_tracks_error">Ваша медиатека пуста</string>
    <string name="media_playlist_error">Вы не создали \n ни одного плейлиста</string>
    <string name="search_no_connection">Проверьте подключение к интернету</string>
    <string name="search_internal_server_error">Ошибка сервера</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_message_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="playlist_message_track_exist_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="dialog_complete_creation">Завершить создание плейлиста?</string>
    <string name="dialog_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_complete">Завершить</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="no_info">Не указано</string>
    <plurals name="playlist_count_tracks">
        <item quantity="zero"> треков</item>
        <item quantity="one"> трек</item>
        <item quantity="two"> трека</item>
        <item quantity="few"> треков</item>
        <item quantity="many"> треков</item>
        <item quantity="other"> треков</item>
    </plurals>
    <plurals name="playlist_time">
        <item quantity="zero"> минут</item>
        <item quantity="one"> минута</item>
        <item quantity="two"> минуты</item>
        <item quantity="few"> минуты</item>
        <item quantity="many"> минут</item>
        <item quantity="other"> минут</item>
    </plurals>
    <string name="playlist_is_empty">В этом плейлисте еще нет треков</string>
    <string name="playlist_details_share">Поделиться</string>
    <string name="playlist_details_edit_info">Редактировать информацию</string>
    <string name="playlist_details_delete">Удалить плейлист</string>
    <string name="dialog_delete_title">Удалить трек</string>
    <string name="dialog_delete_message">Хотите удалить трек?</string>
    <string name="dialog_delete_cancel">Нет</string>
    <string name="dialog_delete_delete">Да</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_delete_playlist_title">Удалить плейлист</string>
    <string name="dialog_delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="dialog_delete_playlist_cancel">Нет</string>
    <string name="dialog_delete_playlist_delete">Да</string>
    <string name="playlist_details_edit">Редактировать</string>
    <string name="playlist_details_save">Сохранить</string>

    // системные строки
    <string name="messages_header" />
    <string name="signature_title" />
    <string name="reply_title" />
    <string name="sync_header" />
    <string name="sync_title" />
    <string name="attachment_title" />
    <string name="attachment_summary_on" />
    <string name="attachment_summary_off" />
</resources>