<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainLinearLayout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/mainTextStyle" />

    <Button
        android:id="@+id/search"
        style="@style/mainButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/search_vector" />

    <Button
        android:id="@+id/media"
        style="@style/mainButtonStyle"
        android:text="@string/media"
        app:icon="@drawable/media_vector" />

    <Button
        android:id="@+id/settings"
        style="@style/mainButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/setting_vector" />

</LinearLayout>