<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_navigation_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.example.playlistmaker.media.ui.MediaFragment"
        android:label="@string/media"
        tools:layout="@layout/fragment_media" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search"/>
    <activity
        android:id="@+id/playerActivity"
        android:name="com.example.playlistmaker.player.ui.PlayerActivity"
        android:label="activity_audioplayer"
        tools:layout="@layout/activity_audioplayer" />
</navigation>