<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        style="@style/settingsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".search.ui.SearchFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MyToolbar"
            app:title="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextAppearance="@style/ToolbarTextAppearance.Title" />

        <FrameLayout
            android:id="@+id/frameLayout"
            style="@style/settingsFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_16"
            android:layout_marginEnd="@dimen/icon_16"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="@dimen/icon_16">

            <EditText
                android:id="@+id/etButtonSearch"
                style="@style/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_radius_background"
                android:drawableStart="@drawable/search_textedit_vector"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/search_et_cursor"
                android:visibility="visible"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/ivClearButton"
                style="@style/searchCloseEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/icon_14"
                android:layout_marginEnd="@dimen/icon_14"
                android:src="@drawable/close_vector"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/progressBar_tint"
                android:outlineAmbientShadowColor="@color/progressBar_shadow"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/icon_8"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_view" />

            <ImageView
                android:id="@+id/ivNothingFoundImage"
                style="@style/search_nothingFoundImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvNothingFound"
                style="@style/search_errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="236dp"
                android:text="@string/nothing_found"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="102dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/ivNoConnectionImage"
                    style="@style/search_noConnectionImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvNoConnection"
                    style="@style/search_errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/icon_8"
                    android:text="@string/something_went_wrong"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvErrorMessage"
                    style="@style/search_errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="102dp"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonUpdate"
                    style="@style/search_buttonUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/icon_8"
                    android:text="@string/update"
                    android:textAlignment="center"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSearchHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <TextView
                    android:id="@+id/tvTittleHistory"
                    style="@style/tvTittleHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/icon_24"
                    android:text="@string/user_search_history"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTracksHistory"
                    style="@style/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/icon_8"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="InefficientWeight"
                    tools:listitem="@layout/track_view" />

                <Button
                    android:id="@+id/buttonClearHistory"
                    style="@style/search_buttonUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/icon_16"
                    android:text="@string/search_clear_history"
                    android:textAlignment="center"
                    app:cornerRadius="54dp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>